scrollbar issue on galaxy fixed

--- a/styles/about.css
+++ b/styles/about.css
@@ -504,3 +504,14 @@ ul.footer {
     /* background-color: mediumturquoise; */
   }
 }
+@media only screen and (max-width: 450px) {
+  .about-us,
+  .who-we-are,
+  .why-chose-us {
+    min-width: 300px;
+  }
+  .image-wrapper {
+    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: auto auto;
+  }
+}
